fix account bio profile not showing

--- a/src/style/scss/objects/_dropdown.scss
+++ b/src/style/scss/objects/_dropdown.scss
@@ -2,7 +2,7 @@
   position: relative;
   transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
   > button {
-    line-height: 40px;
+    //line-height: 40px;
   }
   .dropdown-items {
     transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
@@ -88,7 +88,7 @@
   }
   .dropdown-items {
     background: white;
-    top: 39px;
+    top: 32px;
     left: -172px;
     li {
       width: 100%;
